Sculpting is extremely slow when a Modifier is present with a driver added #120200

Closed
opened 2024-04-03 10:45:22 +02:00 by Chris Jones · 2 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked: 4.0.2

Caused by 7a2d04a5c4

Short description of error
Sculpting is slow when the object being sculpted on contains a Modifier, and a driver is present on one of its values. This occurs even when the modifier is not displayed in the viewport. The example file contains a Multires modifier to increase subdivisions, but the result is the same for high poly objects without Multires. The issue persists in 4.2.0 Alpha.

Exact steps for others to reproduce the error

  1. Load the attached "Slow Sculpt.blend" file
  2. Add 5 or 6 Multires subdivisions
  3. Sculpt on the cube and note the poor performance
  4. Remove the driver from the Warp modifier's falloff Radius value
  5. Sculpt again, and notice the drastic performance increase
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: 4.0.2 Caused by 7a2d04a5c4 **Short description of error** Sculpting is slow when the object being sculpted on contains a Modifier, and a driver is present on one of its values. This occurs even when the modifier is not displayed in the viewport. The example file contains a Multires modifier to increase subdivisions, but the result is the same for high poly objects without Multires. The issue persists in 4.2.0 Alpha. **Exact steps for others to reproduce the error** 1. Load the attached "Slow Sculpt.blend" file 2. Add 5 or 6 Multires subdivisions 3. Sculpt on the cube and note the poor performance 4. Remove the driver from the Warp modifier's falloff Radius value 5. Sculpt again, and notice the drastic performance increase
Chris Jones added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-03 10:45:23 +02:00
Member

Can confirm, will check

Can confirm, will check
Member

Caused by 7a2d04a5c4

CC @Sergey

Caused by 7a2d04a5c432f560ec8ddafad0c0fafa9b3f7e0d CC @Sergey
Sergey Sharybin self-assigned this 2024-04-03 14:41:54 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-03 15:07:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120200
No description provided.